fix(carousel): set auto padding when collapsed

--- a/src/components/Carousel/_carousel.scss
+++ b/src/components/Carousel/_carousel.scss
@@ -26,7 +26,7 @@
 
     .#{$prefix}--carousel-slide-wrapper {
       height: 100%;
-      position: absolute;
+      padding-bottom: 100%;
 
       .#{$prefix}--carousel-slide img {
         position: absolute;
